--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
             <artifactId>okhttp</artifactId>
             <version>3.6.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+        </dependency>
+
     </dependencies>
 
     <build>
